<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/horizontal"
    android:layout_marginTop="@dimen/vertical"
    android:layout_marginRight="@dimen/horizontal"
    tools:context=".SettingsActivity">

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_bahasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bahasa" />

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/vertical"
        android:text="@string/release_reminder"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_group" />

    <TextView
        android:id="@+id/txt_desc_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReminder" />

    <Switch
        android:id="@+id/switch_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txt_desc_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtReminder" />

    <TextView
        android:id="@+id/txt_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/vertical"
        android:text="@string/des2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc_reminder" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reminder_for_return_to_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_daily" />

    <Switch
        android:id="@+id/switch_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_daily" />
</androidx.constraintlayout.widget.ConstraintLayout>

