<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/horizontal"
    android:layout_marginRight="@dimen/horizontal"
    android:layout_marginBottom="@dimen/vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginStart="@dimen/horizontal"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginBottom="@dimen/vertical"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/image_content"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginEnd="@dimen/horizontal"
            android:text="@string/title"
            android:textColor="#090909"
            android:textSize="@dimen/txt_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_movie"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginEnd="@dimen/horizontal"
            android:layout_marginRight="@dimen/horizontal"
            android:text="@string/date"
            android:textSize="@dimen/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/img_movie"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/horizontal"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginEnd="@dimen/horizontal"
            android:layout_marginRight="@dimen/horizontal"
            android:layout_marginBottom="@dimen/vertical"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/description"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_movie"
            app:layout_constraintTop_toBottomOf="@+id/txt_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>